--- a/index.html
+++ b/index.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-title"><h3>Influencer products</h3></div>
+            <div class="nav-option">
+                <div class="nav-links">
+                    <p>Home</p>
+                    <p>Products</p>
+                    <p>Sign Up</p>
+                    <p>Login</p>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="cart fa-solid fa-cart-shopping"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <div class="banner-content">
+                <div class="banner-text">
+                    <h1 class="banner-title">
+                        Start your Journey as 
+                        Influencer
+                    </h1>
+                    <div class="banner-description">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    </div>
+                    <button class="preebook">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="banner-image">
+                    <img class="circle" src="images/Circle design.svg" alt="">
+                    <img class="main-cam" src="images/main-camera.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="sponcer-container">
+            <hr class="top">
+            <div class="logo-container">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div>
+            <hr class="bottom">
+
+        </section>
+    </main>
+
+    <footer></footer>
 </body>
 </html>
