card section done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         </section>
 
         <section class="sponcer-container">
-            <hr class="top">
             <div class="logo-container">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Amazon.svg" alt="">
@@ -55,8 +54,82 @@
                 <img src="logos/Walmart.svg" alt="">
                 <img src="logos/Target.svg" alt="">
             </div>
-            <hr class="bottom">
+        </section>
 
+        <section class="card-section">
+            <h2 class="card-section-title">Popular Collection</h2>
+
+            <div class="card-container">
+                <div class="card">
+
+                    <img src="images/tripod.png" alt="">
+                    <h2 class="card-title">Flex Tripod</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/mic.png" alt="">
+                    <h2 class="card-title">Microphone</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/airpod.png" alt="">
+                    <h2 class="card-title">Airbuds</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/drone.png" alt="">
+                    <h2 class="card-title">drone</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/lights.png" alt="">
+                    <h2 class="card-title">Light Setup</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/setup.png" alt="">
+                    <h2 class="card-title">Photo Setup</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/camera.png" alt="">
+                    <h2 class="card-title">Vlogging Camera</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/single-light.png" alt="">
+                    <h2 class="card-title">Green Screen</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="images/action.png" alt="">
+                    <h2 class="card-title">Action Camera</h2>
+                    <h2 class="price">$120.45</h2>
+                    <p class="card-description">Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+            <div class="see-btn-div">
+                <button class="see-more">
+                    See More <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
         </section>
     </main>
 
