desktop version done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </section>
 
         <section class="card-section">
-            <h2 class="card-section-title">Popular Collection</h2>
+            <h3 class="card-section-title">Popular Collection</h3>
 
             <div class="card-container">
                 <div class="card">
@@ -131,8 +131,31 @@
                 </button>
             </div>
         </section>
+
+        <section class="featured-section">
+            <img src="images/gear.png" alt="">
+            <div class="feature-text">
+                <h2 class="feature-title">Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="join-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+
+        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-title">Influencer products</div>
+        <p>Copyright © 2020  influencer products</p>
+        <p>All rights reserved</p>
+        <div class="footer-icon">
+            <i class="fa-brands fa-instagram"></i>
+        <i class="fa-solid fa-globe"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+        </div>
+        </div>
+        
+    </footer>
 </body>
 </html>
